--- a/pom.xml
+++ b/pom.xml
@@ -16,13 +16,13 @@
     <properties>
         <java.version>11</java.version>
         <jacoco.version>0.8.6</jacoco.version>
-        <!--        <sonar.organization>yashwanth1952-1</sonar.organization>-->
-<!--        <sonar.host.url>https://sonarcloud.io</sonar.host.url>-->
-<!--        <sonar.project.key>yashwanth1952_mongoDbApplication</sonar.project.key>-->
-<!--        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>-->
-<!--        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>-->
-<!--        <sonar.sources>src/main/java</sonar.sources>-->
-<!--        <sonar.language>java</sonar.language>-->
+        <sonar.organization>yashwanth1952-1</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <sonar.project.key>yashwanth1952_mongoDbApplication1</sonar.project.key>
+        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+        <sonar.sources>src/main/java</sonar.sources>
+        <sonar.language>java</sonar.language>
         <!--        <sonar.exclusions>-->
         <!--            **/com/example/MongoDbApplication/repository/**,-->
         <!--            **/com/example/MongoDbApplication/config/**,-->
